<resources>
    <string name="app_name">Family Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="host_label">Server Host: </string>
    <string name="port_label">Server Port: </string>
    <string name="userName_label">User Name: </string>
    <string name="password_label">Password: </string>
    <string name="firstName_label">First Name: </string>
    <string name="lastName_label">Last Name: </string>
    <string name="email_label">Email: </string>
    <string name="gender_label">Gender: </string>
    <string name="signIn_label">Sign In</string>
    <string name="register_label">Register</string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="host_hint">10.0.0.0</string>
    <string name="port_hint">8080</string>
    <string name="userName_hint">rodham</string>
    <string name="password_hint">password</string>
    <string name="firstName_hint">Ken</string>
    <string name="lastName_hint">Rodham</string>
    <string name="email_hint">email@gmail.com</string>
    <string name="invalid_url">Provided Url is invalid</string>
    <string name="user_password_not_set">Username or Password is not set</string>
    <string name="port_host_not_set">Host or Port is not set</string>
    <string name="user_logged_in">Successful login</string>
    <string name="map_hello">Welcome to the map fragment</string>
    <string name="person_data_gathered">Person Data Collected</string>
    <string name="event_data_gathered">Event Data Collected</string>
    <string name="failed_login">Unsuccessful Login With Error: </string>
    <string name="failed_register">Unsuccessful Register With Error: </string>
    <string name="user_registered">Successful Register</string>
    <string name="name">Name</string>
    <string name="event">Event</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="title_activity_event">Family Map</string>
    <string name="title_activity_person">Family Map: Person Details</string>
    <string name="title_activity_settings">Family Map: Settings</string>
    <string name="title_activity_filter">Family Map: Filter</string>
    <string name="title_activity_search">Family Map: Search</string>
    <string name="Birth_events">Birth Events</string>
    <string name="Marriage_events">Marriage Events</string>
    <string name="Death_events">Death Events</string>
    <string name="fathers_side">Father\'s Side</string>
    <string name="mothers_side">Mother\'s Side</string>
    <string name="male_events">Male Events</string>
    <string name="female_events">Female Events</string>
    <string name="expandable_carrot">Expandable Carrot</string>
    <string name="life_events_label">Life Events</string>
    <string name="family_label">Family</string>
    <string name="gender_image">Gender Image</string>
    <string name="life_lines">Life Story Lines</string>
    <string name="show_life_lines">Show Life Story Lines</string>
    <string name="tree_lines">Family Tree Lines</string>
    <string name="show_tree_lines">Show Tree Lines</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="show_spouse_lines">Show Spouse Lines</string>
    <string name="map_type">Map Type</string>
    <string name="map_type_description">Background Display on Map</string>
    <string name="resync_data">Resync Data</string>
    <string name="resync_data_description">From Family Map Service</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Returns To Login Screen</string>
    <string name="name_map_fragment">Please Select</string>
    <string name="event_map_fragment">An Event</string>
    
    <string-array name="typeSpinner">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>

    <string-array name="colorSpinner">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Purple</item>
    </string-array>



</resources>
