<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cs240.trevash.familymap.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/host_label"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/host_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:hint="@string/host_hint"
                android:inputType="text"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/port_label"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/port_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:hint="@string/port_hint"
                android:inputType="text"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/userName_label"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/userName_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="2"
                android:hint="@string/userName_hint"
                android:inputType="text"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="3"
                android:text="@string/password_label"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/password_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="3"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="4"
                android:text="@string/firstName_label"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/firstName_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="4"
                android:hint="@string/firstName_hint"
                android:inputType="text"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="5"
                android:text="@string/lastName_label"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/lastName_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="5"
                android:hint="@string/lastName_hint"
                android:inputType="text"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="6"
                android:text="@string/email_label"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/email_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="6"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textSize="26sp" />
        </GridLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="start">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_label"
                android:textSize="26sp" />

            <RadioGroup
                android:id="@+id/radioGroup_radioGroup"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/male_label"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/female_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/female_label"
                    android:textSize="18sp" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signIn_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signIn_label"
                android:layout_gravity="end"
                android:enabled="false"/>

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_label"
                android:layout_gravity="end"
                android:enabled="false"/>

        </LinearLayout>


    </LinearLayout>

</FrameLayout>
